[package]
name = "autherium-loader"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.32.1"
egui_extras = { version = "0.32.1", features = ["all_loaders"] }
regex = "1.11.1"
reqwest = { version = "0.12.23", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["serde_derive"] }
tokio = { version = "1.47.1", features = ["full", "rt", "rt-multi-thread"] }
autherium-rs = { path = "../autherium-rs"}

